# awesomedb

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/database/: config.hpp  database.cpp  database.hpp  model.cpp  model.hpp  model_validators.cpp  registrar.cpp  registrar.hpp  table.cpp  table.hpp
lib/utils/: any_comparator.cpp  any_comparator.hpp  any_formatter.cpp  any_formatter.hpp  list.hpp  qvariant_converter.cpp  qvariant_converter.hpp  qvariant_mapper.cpp  qvariant_mapper.hpp
